# gamesearch-llm

./: .gitignore  .terraform.lock.hcl  README.md  main.tf  variables.tf
.github/: pull_request_template.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  terraform.yml
backend/: Dockerfile  pyproject.toml
backend/src/backend/: .env.example  main.py
docs/: README.md
docs/api/: README.md
docs/backend/: README.md  setup-and-config.md
docs/frontend/: README.md
docs/infrastructure/: README.md
etl/gamesearch-extract/: Dockerfile  go.mod  main.go
etl/gamesearch-transform/: Dockerfile  main.py  requirements.txt
etl/gamesearch-transform/.zed/: tasks.json
frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: types.ts
frontend/src/lib/components/: GameCard.svelte  GameModal.svelte  PageSizeSelector.svelte  Pagination.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/api/search/: +server.ts
gamesearch-base/: Dockerfile  pyproject.toml
gamesearch-base/src/gamesearch_base/: main.py
infrastructure/: main.tf  outputs.tf  variables.tf
infrastructure/app/: main.tf  outputs.tf  variables.tf
infrastructure/etl/: main.tf  variables.tf
infrastructure/fargate/: main.tf  variables.tf
infrastructure/lambdas/: main.tf  variables.tf
infrastructure/mongodb/: main.tf  variables.tf
lambdas/gamesearch-data/: go.mod  go.sum  main.go
lambdas/gamesearch-extract/: go.sum  main.go
lambdas/gamesearch-transform/: Dockerfile  lambda_function.py  requirements.txt
scripts/: build.sh
