[project]
name = "backend"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yang Chen", email = "yangrc.chen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain-anthropic>=0.3.10",
    "langgraph>=0.3.20",
    "motor>=3.7.0",
    "voyageai>=0.3.2",
]

[project.scripts]
gamesearch-backend = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
